# tabledora

./: LICENSE  README.md
tabledora-app/: README.md  index.html  package-lock.json  package.json
tabledora-app/dist-isolation/: index.html  index.js
tabledora-app/src/: App.svelte  types.d.ts
tabledora-app/src-tauri/: Cargo.toml  tauri.conf.json
tabledora-app/src-tauri/src/: main.rs
tabledora-app/src/lib/: Editor.svelte  Explorer.svelte  FileTree.svelte  Source.svelte  SourceList.svelte  TabBody.svelte  TabList.svelte  Window.svelte  Workspace.svelte
tabledora-website/: README.md  package-lock.json  package.json
